# crewai_made_easy

devcrew/: README.md  crewai_docs.txt  pyproject.toml  report.md
devcrew/src/devcrew/: crew.py  main.py
devcrew/src/devcrew/config/: agents.yaml  tasks.yaml
devcrew/src/devcrew/tools/: compiler_tool.py
